--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,11 @@
   "name": "video-to-mp3-converter",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:3001",
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,11 +19,14 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
+    "watch": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "dev": "concurrently \"npm run watch\" \"npm start\"",
     "start": "react-scripts start",
-    "watch:css": "postcss src/styles/global.css -o src/styles/tailwind-out.css",
+    "build:css": "postcss src/styles/global.css -o src/styles/tailwind-out.css",
+    "watch:css": "watch 'npm run build:css' ./src | node node_modules/print-time",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
