--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,11 @@
     "scripts": {
         "start": "node --inspect=5858 -r ts-node/register ./src/server.ts",
         "start:watch": "nodemon",
-        "dev:server": "nodemon ",
+        "dev": "nodemon ",
         "build": "tsc"
     },
     "dependencies": {
+        "body-parser": "^1.20.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.2",
         "express": "^4.18.1",
