--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,15 @@
         "build": "tsc"
     },
     "dependencies": {
+        "@types/axios": "^0.14.0",
+        "@types/node-fetch": "^2.6.2",
+        "axios": "^0.27.2",
         "body-parser": "^1.20.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.2",
         "express": "^4.18.1",
         "express-tsx-views": "^1.4.9",
+        "node-fetch": "^3.2.10",
         "path": "^0.12.7"
     },
     "devDependencies": {
