--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
@@ -27,7 +28,7 @@
     "dev": "concurrently \"npm run watch\" \"npm start\"",
     "start": "react-scripts start",
     "build:css": "postcss src/styles/global.css -o src/styles/tailwind-out.css",
-    "watch:css": "watch 'npm run build:css' ./src | node node_modules/print-time",
+    "watch:css": "watch 'npm run build:css' ./src",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
