--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-        "start": "node --inspect=5858 -r ts-node/register ./src/server.ts",
+        "start": "node dist/index.js",
         "start:watch": "nodemon",
         "dev": "nodemon ",
         "build": "tsc"
